# Alist-MikananiRss

./: .dockerignore  .gitignore  Api.py  Config.py  ConfigExample.py  Filter.py  README.md  RSS.py  RSSParser.py  download_old_anime.py  example.py  example.yaml  example_full.yaml  full_config.yaml.example  functional.py  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  save.csv
.github/workflows/: publish_docker.yml  publish_pypi.yml
api/: __init__.py  alist.py
core/: __init__.py  bot.py  database.py  downloader.py  extractor.py  manager.py  mikan.py  monitor.py  parser.py  renamer.py  rssmanager.py  rssparser.py
core/alist/: __init__.py  api.py  offline_download.py
core/api/: __init__.py  alist.py  telegram.py
core/bot/: __init__.py  bot_base.py  notificationbot.py  notifier.py  tgbot.py
core/common/: config_loader.py  database.py  extractor.py  filters.py  globalvar.py  initializer.py  logger.py
docker/: Dockerfile
rss/: __init__.py  filter.py  manager.py  parser.py  rss.py
src/alist_mikananirss/: __init__.py  __main__.py  downloader.py  extractor.py  main.py  mikan.py  monitor.py  renamer.py  test.py  utils.py
src/alist_mikananirss/alist/: __init__.py  api.py  offline_download.py  tasks.py
tests/: test_alist.py  test_api.py  test_bots.py  test_download_manager.py  test_downloader.py  test_extractor.py  test_filter.py  test_mikan.py  test_remmapper.py  test_renamer.py  test_rss_monitor.py  test_rssparser.py
tests/alist/: test_alist.py
tests/bot/: test_notification_sender.py  test_telegrambot.py
tests/common/: test_config.py  test_config.yaml  test_config_invalid.yaml  test_config_loader.py  test_config_valid.yaml  test_database.py  test_initializer.py
tests/core/: test_filter.py  test_remapper.py  test_remmapper.py  test_renamer.py  test_rss_monitor.py
tests/download_manager/: test_build_download_path.py  test_download_manager.py  test_task_monitor.py
tests/extractor/: test_chatgpt_extrator.py  test_extractor.py  test_regex_extrator.py
tests/notification/: test_anpushbot.py  test_notification_sender.py
tests/websites/: test_acgrip.py  test_defaultwebsite.py  test_dmhy.py  test_factory.py  test_mikan.py
(+68 files in other folders)
