[project]
name = "alist-mikananirss"
version = "0.3.2"
description = "Automatically fetch anime updates from the Mikan Project's RSS feed and offline download them to the cloud drive through Alist."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11",
    "aiosqlite>=0.20.0",
    "async-lru>=2.0.4",
    "asyncio>=3.4.3",
    "beautifulsoup4>=4.12.3",
    "feedparser>=6.0.11",
    "loguru>=0.7.3",
    "openai>=1.58.1",
    "python-telegram-bot>=21.9",
    "pyyaml>=6.0.2",
    "tenacity>=9.0.0",
]

[project.scripts]
alist-mikananirss = "alist_mikananirss:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/alist_mikananirss"]

[dependency-groups]
dev = [
    "pytest-asyncio>=0.25.1",
    "pytest>=8.3.4",
    "aioresponses>=0.7.7",
    "ipykernel>=6.29.5",
    "ruff>=0.8.4",
    "black>=24.10.0",
    "requests>=2.32.3",
    "coverage>=7.6.10",
    "pytest-order>=1.3.0",
]
